syntax = "proto2";

package coldwar;

import "Move.proto";

message MoveList {
	repeated Move moves = 1;
}