syntax = "proto2";

package com.berserkbentobox.coldwar;

import "Id.proto";
import "Heat.proto";
import "Province.proto";
import "Leader.proto";
import "Dissidents.proto";
import "Technology.proto";
import "Policy.proto";
import "Conflict.proto";
import "Superpower.proto";
import "Treaty.proto";
import "Pseudorandom.proto";
import "Move.proto";
import "Event.proto";
import "Version.proto";
import "Deterrence.proto";
import "Influence.proto";
import "Crisis.proto";

// GameSettings contains constants over the course of the game.
// These are not logged each turn, but merely copied to the top level GameState.
message GameSettings {
	optional VersionMechanicSettings version_settings = 1;
	optional PolicyMechanicSettings policy_settings = 2;
	optional LeaderMechanicSettings leader_settings = 3;
	optional TreatyMechanicSettings treaty_settings = 4;
	optional SuperpowerMechanicSettings superpower_settings = 5;
	optional MoveMechanicSettings move_settings = 6; //TODO: cleanup
	optional EventMechanicSettings event_settings = 7; //TODO: cleanup
	optional TechnologyMechanicSettings technology_settings = 8;
	optional HeatMechanicSettings heat_settings = 9;
	optional ProvinceMechanicSettings province_settings = 10;
	optional PseudorandomMechanicSettings pseudorandom_settings = 11;
	optional ConflictMechanicSettings conflict_settings = 12;
	optional DeterrenceMechanicSettings deterrence_settings = 13;
	optional InfluenceMechanicSettings influence_settings = 14;
	optional CrisisMechanicSettings crisis_settings = 15;
}