syntax = "proto2";

package com.berserkbentobox.coldwar;

import "InfluenceStore.proto";

message UnitedStates {
	optional int32 patriotism = 1;
	optional bool found_nato = 2;
	optional InfluenceStore influence_store = 3;
	optional bool cia_founded = 4 [default = false];
}

